--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
-VITE_HOST="http://localhost:4000"
+VITE_HOST="https://backend.smeb.online"
+VITE_API_KEY=5498367
+
+//https://backend.smeb.online
+//http://localhost:4000
