--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_HOST="https://backend.smeb.online"
+VITE_HOST="http://localhost:4000"
 
 //https://backend.smeb.online
 //http://localhost:4000
